@@ -77,9 +77,6 @@
                 <version>3.11.0</version> <!-- specify version -->
                 <configuration>
                     <release>21</release> <!-- use release for preview features -->
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
